<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Enterprise extends Model
{
    protected $fillable = [
        'name',
        'address',
        'phone',
    ];

    public function departments()
    {
        return $this->hasMany('App\Models\Department', 'enterprise_id');
    }

    public function providers()
    {
        return $this->belongsToMany('App\Models\Provider');
    }
}
