<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateDepartments extends Migration{
	public function up(){ 
 		Schema::create('departments', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('name');
			$table->string('description');
			$table->integer('enterprise_id');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}