<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateEmployees extends Migration{
	public function up(){ 
 		Schema::create('employees', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('user_id');
			$table->string('name');
			$table->string('lastname');
			$table->string('document');
			$table->integer('type_document');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}