<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateProducts extends Migration{
	public function up(){ 
 		Schema::create('products', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('name');
			$table->string('description');
			$table->string('price');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}