<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateProviders extends Migration{
	public function up(){ 
 		Schema::create('providers', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('name');
			$table->string('address');
			$table->string('phone');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}