<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateSaleorders extends Migration{
	public function up(){ 
 		Schema::create('saleorders', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('serie');
			$table->integer('correlative');
			$table->date('stored_at');
			$table->integer('state');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}