<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateUsers extends Migration{
	public function up(){ 
 		Schema::create('users', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('username');
			$table->string('password');
			$table->integer('role');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}